--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,9 @@
   background: rgb(244, 244, 244);
   cursor: pointer;
 }
-.content{
+/* .content{
 padding: 0 10px 0 10px;
-}
+} */
 .contentTask{
   /* width: 70%; */
   }
@@ -29,7 +29,7 @@ padding: 0 10px 0 10px;
     font-size: 12px;
   }
   .header{
-    background: #0e9357;
+    background: #c31f5e;
     height: 70px;
     margin-bottom: 20px;
     display: flex;
@@ -47,4 +47,32 @@ padding: 0 10px 0 10px;
     padding: 0 20px 0 10px;
     text-align: left;
     border: 1px rgb(232, 234, 239) solid;
+  }
+  .content-table{
+    border-top: 1px rgb(230, 231, 236) solid;
+    padding: 20px;
+    margin-top: 20px;
+    background: rgb(246, 246, 246);
+  }
+  .table{
+    margin-top: 20px;
+    border: 1px rgb(230, 231, 236) solid;
+    /* box-shadow: 1px 1px 12px rgb(243, 241, 241); */
+    background: rgb(255, 255, 255);
+  }
+  .title-table{
+    font-size: 1.2rem;
+    color:  rgb(48, 50, 50);
+    font-weight: 500;
+  }
+  .flex{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .ant-table-thead th{
+    color: rgb(85, 88, 92) !important;
+  }
+  .ant-table-tbody{
+    color: rgb(85, 88, 92);
   }
