--- a/src/index.css
+++ b/src/index.css
@@ -48,17 +48,13 @@ padding: 0 10px 0 10px;
     text-align: left;
     border: 1px rgb(232, 234, 239) solid;
   }
-  .content-table{
-    border-top: 1px rgb(230, 231, 236) solid;
-    padding: 20px;
-    margin-top: 20px;
-    background: rgb(246, 246, 246);
+  .ant-table-wrapper .ant-table-tbody >tr >th, :where(.css-dev-only-do-not-override-pr0fja).ant-table-wrapper .ant-table-tbody >tr >td{
+    border: none;
+    padding: 5px;
   }
   .table{
     margin-top: 20px;
-    border: 1px rgb(230, 231, 236) solid;
     /* box-shadow: 1px 1px 12px rgb(243, 241, 241); */
-    background: rgb(255, 255, 255);
   }
   .title-table{
     font-size: 1.2rem;
@@ -72,7 +68,158 @@ padding: 0 10px 0 10px;
   }
   .ant-table-thead th{
     color: rgb(85, 88, 92) !important;
+    /* background: rgb(240, 239, 239) !important; */
   }
   .ant-table-tbody{
     color: rgb(85, 88, 92);
   }
+  .login-form {
+    max-width: 300px;
+  }
+  .login-form-forgot {
+    float: right;
+  }
+  .ant-col-rtl .login-form-forgot {
+    float: left;
+  }
+  .login-form-button {
+    width: 100%;
+  }
+  .content-login{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    height: 100vh;
+    overflow: hidden;
+  }
+  .img-absolute{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 1100vh;
+    z-index: -1;
+    opacity: .4;
+    background-image: url("./assets/tejido.png");
+  }
+  .img-logo-horizontal{
+    max-width: 300px;
+    margin-bottom: 20px;
+  }
+.content-desc{
+  background: white;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px rgb(230, 237, 236) solid;
+  gap: 2px;
+}
+.image-logo{
+  width: 70%;
+  height: 140px;
+}
+.name-user{
+  color: #5a626b;
+  font-size: .7rem;
+  font-weight: 700;
+  text-align: center;
+}
+.name-role{
+  color: #5c82eb;
+  font-size: .7rem;
+  font-style:oblique;
+  text-align: center;
+}
+:where(.css-dev-only-do-not-override-pr0fja).ant-menu-light.ant-menu-root.ant-menu-inline, :where(.css-dev-only-do-not-override-pr0fja).ant-menu-light>.ant-menu.ant-menu-root.ant-menu-inline, :where(.css-dev-only-do-not-override-pr0fja).ant-menu-light.ant-menu-root.ant-menu-vertical, :where(.css-dev-only-do-not-override-pr0fja).ant-menu-light>.ant-menu.ant-menu-root.ant-menu-vertical {
+  border-inline-end: 0px solid rgba(5, 5, 5, 0.06);
+}
+.content-flex{
+  display: flex;
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+}
+.content-flex .flex-left{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  border-right: 4px #f23b81 solid;
+  gap: 17px;
+  padding: 60px;
+  justify-content: center;
+}
+.content-flex .flex-left img{
+max-width: 300px;
+}
+.content-flex .flex-left h4{
+  color: #5e6b76;
+  font-weight: 700;
+  font-size: 1.1rem;
+  font-family:sans-serif;
+  }
+  .content-flex .flex-left span{
+    font-family:sans-serif;
+    font-size: .8rem;
+    line-height: 1.8;
+   text-align: justify;
+   color: rgb(89, 101, 106);
+  }
+.content-flex .flex-right{
+  width: 40%;
+  background: rgb(30, 57, 82);
+  height: 100%;
+}
+.wrap-button{
+  display: flex;
+  gap: 20px;
+}
+.wrap-button .wrap-bt{
+  background-color: rgb(210, 17, 75);
+  color: white;
+  border: none;
+  padding: 8px;
+  align-items: center;
+  border-radius: 6px;
+  display: flex;
+  gap: 9px;
+}
+.wrap-button .wrap-bt:nth-child(2){
+  background-color: rgb(83, 84, 90);
+}
+.wrap-button .wrap-bt:hover{
+  box-shadow: 0px 0px 10px rgb(165, 166, 167);
+  cursor: pointer;
+}
+.flex-right{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  color: rgb(203, 205, 207);
+  font-family:sans-serif;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+.flex-right h4{
+  font-weight: 700;
+  font-size: 1.1rem;
+  color: white;
+}
+.flex-right img{
+  width: 50%;
+  height: 40%;
+}
+.flex-right span{
+  font-size: .8rem;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+.modal-content{
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
