--- a/src/index.css
+++ b/src/index.css
@@ -157,18 +157,17 @@ max-width: 300px;
 .content-flex .flex-left h4{
   color: #5e6b76;
   font-weight: 700;
-  font-size: 1.1rem;
+  font-size: 1.9rem;
   font-family:sans-serif;
   }
   .content-flex .flex-left span{
     font-family:sans-serif;
-    font-size: .8rem;
     line-height: 1.8;
    text-align: justify;
    color: rgb(89, 101, 106);
   }
 .content-flex .flex-right{
-  width: 40%;
+  width: 50%;
   background: rgb(30, 57, 82);
   height: 100%;
 }
@@ -180,10 +179,10 @@ max-width: 300px;
   background-color: rgb(210, 17, 75);
   color: white;
   border: none;
-  padding: 8px;
-  align-items: center;
+  padding: 5px 12px 5px 12px;
   border-radius: 6px;
   display: flex;
+  align-items: center;
   gap: 9px;
 }
 .wrap-button .wrap-bt:nth-child(2){
@@ -205,7 +204,7 @@ max-width: 300px;
 }
 .flex-right h4{
   font-weight: 700;
-  font-size: 1.1rem;
+  font-size: 1.8rem;
   color: white;
 }
 .flex-right img{
@@ -213,7 +212,6 @@ max-width: 300px;
   height: 40%;
 }
 .flex-right span{
-  font-size: .8rem;
   display: flex;
   align-items: center;
   gap: 15px;
@@ -239,4 +237,19 @@ background-size: contain;
   background-color: #00f;
   position: absolute;
   cursor: pointer;
+}
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  box-shadow: none;
+  border: none;
+}
+.firm-image{
+  background-image: url("./assets/firma.png");
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 900px;
+  background-size: 600px;
+background-position: center;
 }
