--- a/src/index.css
+++ b/src/index.css
@@ -123,13 +123,13 @@ padding: 0 10px 0 10px;
 }
 .name-user{
   color: #5a626b;
-  font-size: .7rem;
+  font-size: 1.3rem;
   font-weight: 700;
   text-align: center;
 }
 .name-role{
   color: #5c82eb;
-  font-size: .7rem;
+  font-size: 1.3rem;
   font-style:oblique;
   text-align: center;
 }
